--- a/ASP/Views/Home/Index.cshtml
+++ b/ASP/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UjiCoba.Models.UploadImage
 
 @{
-    Layout = "_Layout"; // Pastikan layout yang sesuai dengan proyek Anda
+    Layout = "_Layout";
 }
 
 <!-- Header dengan judul yang lebih menarik -->
